updated profile summary component for dark mode

--- a/src/app/components/dialogs/atc/atc.component.scss
+++ b/src/app/components/dialogs/atc/atc.component.scss
@@ -84,7 +84,7 @@ mat-form-field {
 
   .divider {
     width: 2px;
-    background-color: #dee8ff;
+    background-color: var(--atc-divider);
   }
 
   .right {
