--- a/src/app/components/profile-summary/profile-summary.component.scss
+++ b/src/app/components/profile-summary/profile-summary.component.scss
@@ -8,7 +8,7 @@
 }
 
 .summary-parent {
-  background-color: white;
+  background-color: var(--profile-summary-background-color);
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   margin-bottom: 15px;
@@ -114,9 +114,10 @@
         height: 35px;
         display: grid;
         border-radius: 50%;
-        border: 2px solid white;
+        border: var(--profile-summary-remaining-followers-border);
         background-color: aliceblue;
         transition: border 0.2s ease-in-out;
+        color: var(--profile-summary-remaining-followers-color);
 
         &:hover {
           border-color: #481a89;
@@ -140,8 +141,8 @@
       // grid-gap: 5px;
       p {
         display: inline-block;
-        background-color: #dce6fd;
-        color: #481a89;
+        background-color: var(--profile-summary-list-of-interests-background-color);
+        color: var(--profile-summary-list-of-interests-p);
         padding: 5px 15px;
         border-radius: 15px;
         text-align: center;
