--- a/src/assets/styles/general.scss
+++ b/src/assets/styles/general.scss
@@ -239,14 +239,14 @@ app-root {
   .label-container {
     margin-bottom: 5px;
     label {
-      color: rgb(184, 184, 184);
+      color: var(--custom-input-label-container);
       font-size: 12px;
       font-weight: 300;
     }
   }
 
   .input-container {
-    background-color: #f6f8fa;
+    background-color: var(--custom-input-input-container);
     border: 2px solid transparent;
     border-radius: 10px;
     padding: 15px 20px;
