--- a/src/app/pages/manage/manage.component.scss
+++ b/src/app/pages/manage/manage.component.scss
@@ -1,6 +1,9 @@
+$temp: var(--manage-header-control-background-color);
+
 .container {
   padding-left: 15px;
   padding-right: 15px;
+
   .header {
     display: grid;
     grid-template-columns: auto;
@@ -17,7 +20,7 @@
       padding-right: 15px;
 
       .control {
-        background-color: #f6f8fa;
+        background-color: var(--manage-header-control-background-color);
         border: 2px solid transparent;
         border-radius: 25px;
         display: inline-grid;
@@ -27,7 +30,7 @@
         justify-self: center;
         transition: border 0.2s ease-in-out,
           width 150ms cubic-bezier(0.25, 0.8, 0.25, 1);
-        width: 100%;  
+        width: 100%;
 
         &:focus-within {
           border: 2px solid rgba(72, 26, 137, 0.5);
@@ -35,8 +38,9 @@
 
         .control-icon {
           align-self: center;
+
           fa-icon {
-            color: #481a89;
+            color: var(--manage-header-control-icon-color);
             font-size: 16px;
           }
         }
@@ -47,9 +51,15 @@
           background-color: transparent;
           border: none;
           font-size: 14px;
+          color: var(--manage-header-control-input-color);
+
           &:focus {
             outline: 0;
             border: 0;
+          }
+
+          &::placeholder {
+            color: var(--manage-header-control-input-placeholder-color);
           }
         }
       }
@@ -61,7 +71,7 @@
 
       .control-group {
         text-align: center;
-        background-color: #f6f8fa;
+        background-color: var(--manage-header-control-background-color);
         border: 2px solid transparent;
         border-radius: 25px;
         padding: 5px 20px;
@@ -78,7 +88,7 @@
           cursor: pointer;
 
           fa-icon {
-            color: #c8c4d1;
+            color: var(--manage-header-control-icon-color);
             font-size: 16px;
             transition: color 0.2s ease-in-out;
           }
@@ -103,11 +113,11 @@
 
 .selected {
   fa-icon {
-    color: #481a89 !important;
+    color: var(--manage-header-control-icon-color) !important;
   }
 
   span {
-    color: #481a89 !important;
+    color: var(--manage-header-control-selected) !important;
   }
 }
 
