minor changes for dark mode

--- a/src/app/components/resource/resource.component.scss
+++ b/src/app/components/resource/resource.component.scss
@@ -74,7 +74,7 @@
 
     .like {
       fa-icon {
-        color: rgba(0, 0, 0, 0.2);
+        color: var(--resource-stats-like);
         vertical-align: top;
       }
 
