--- a/src/app/pages/share-resource/share-resource.component.scss
+++ b/src/app/pages/share-resource/share-resource.component.scss
@@ -1,5 +1,5 @@
 .custom-image {
-    background-color: rgb(233, 231, 231);
+    background-color: var(--custom-image-background-color);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -11,16 +11,21 @@
     cursor: pointer;
 
     p {
+        color: var(--custom-image-p);
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
         text-align: center;
+
+        a {
+            color: var(--custom-image-p-a);
+        }
     }
 }
 
 .resource-image {
-    background-color: rgb(233, 231, 231);
+    background-color: var(--custom-image-background-color);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -31,11 +36,16 @@
     position: relative;
 
     p {
+        color: var(--custom-image-p);
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
         text-align: center;
+
+        a {
+            color: var(--custom-image-p-a);
+        }
     }
 }
 
