--- a/src/assets/styles/general.scss
+++ b/src/assets/styles/general.scss
@@ -106,7 +106,7 @@ app-root {
         display: none;
         align-self: center;
         justify-self: center;
-        color: rgba(0, 0, 0, 0.8);
+        color: var(--profile-toggle-profile-view);
         width: 100px;
         font-size: 12px;
       }
@@ -257,9 +257,14 @@ app-root {
       border: none;
       font-size: 15px;
       width: 100%;
+      color: var(--custom-input-color);
       &:focus {
         outline: 0;
         border: 0;
+      }
+
+      &::placeholder {
+        color: var(--custom-input-placeholder);
       }
     }
 
