--- a/src/app/pages/search-page/search-page.component.scss
+++ b/src/app/pages/search-page/search-page.component.scss
@@ -5,7 +5,7 @@
     margin-bottom: 0;
   }
   .search-container {
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: var(--search-page-tool-background-color);
     padding: 0 15px;
     border-radius: 5px;
     .search {
