--- a/src/app/pages/manage/manage-collections/manage-collections.component.html
+++ b/src/app/pages/manage/manage-collections/manage-collections.component.html
@@ -3,9 +3,8 @@
 </div> -->
 
 <div class="list-of-collections" *ngIf="!isLoading">
+  <div *ngIf="collections && collections.length === 0">
+    <app-empty-state [data]="{ type: 'collection', isSelf: userData.isSelf }"></app-empty-state>
+  </div>
   <app-collection *ngFor="let collection of collections" [data]="collection"></app-collection>
-</div>
-
-<div *ngIf="collections && collections.length === 0">
-  You haven't made a collection yet
 </div>
