--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,4 +1,5 @@
 <div class="search">
+  <!-- * Desktop view -->
   <div class="form">
     <div class="search-icon">
       <fa-icon [icon]="faSearch"></fa-icon>
@@ -13,6 +14,10 @@
         (keyup.enter)="goToSearch()"
       />
     </form>
+  </div>
+
+  <div class="search-compact">
+    <fa-icon [icon]="faSearch"></fa-icon>
   </div>
 
   <div
@@ -30,12 +35,6 @@
           <div class="item-a">
             <app-user-image class="item-a" [userData]="user" [clickable]="false" size="xs"></app-user-image>
           </div>
-          <!-- <div
-            class="item-a"
-            [ngStyle]="{
-              'background-image': 'url(' + user.image + ')'
-            }"
-          ></div> -->
           <p class="item-b">{{ user.firstName }} {{ user.lastName }}</p>
           <small class="item-c"
             >@{{ user.username ? user.username : "..." }}</small
