--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -11,13 +11,11 @@ $image-height: 38px;
   position: relative;
 
   .form {
+    display: none;
     width: 100%;
     background-color: var(--search-background-color);
     border: 2px solid transparent;
     border-radius: 25px;
-    display: grid;
-    grid-template-columns: 15px auto;
-    grid-gap: 15px;
     padding: 2px 0 2px 15px;
     transition: border 0.2s ease-in-out;
 
@@ -26,7 +24,8 @@ $image-height: 38px;
     }
 
     .search-icon {
-      align-self: center;
+      display: inline-block;
+      margin-right: 15px;
       fa-icon {
         color: var(--search-search-icon-color);
         font-size: 16px;
@@ -34,9 +33,9 @@ $image-height: 38px;
     }
 
     form {
+      display: inline-block;
       margin: 0;
       input {
-        align-self: center;
         background-color: transparent;
         border: none;
         font-size: 15px;
@@ -47,6 +46,10 @@ $image-height: 38px;
         }
       }
     }
+  }
+
+  .search-compact {
+    display: inherit;
   }
 
   .search-result {
