--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -1,22 +1,34 @@
 <div class="app-container" [class.is-mobile]="mobileQuery.matches">
-  <mat-toolbar class="toolbar">
-    <button mat-icon-button (click)="snav.toggle(); isMenuActive = !isMenuActive">
-      <mat-icon>{{ isMenuActive ? "clear" : "menu" }}</mat-icon>
-    </button>
-    <h1 class="app-name" *ngIf="!mobileQuery.matches">
-      <a routerLink="/">Everest</a>
-    </h1>
+  <mat-toolbar>
+    <div class="toolbar">
+      <div class="left">
+        <button mat-icon-button (click)="snav.toggle(); isMenuActive = !isMenuActive">
+          <mat-icon>{{ isMenuActive ? "clear" : "menu" }}</mat-icon>
+        </button>
+        <h1 class="app-name">
+          <a routerLink="/">Everest</a>
+        </h1>
+      </div>
 
-    <app-search class="app-search"></app-search>
+      <div class="right">
+        <div class="app-search">
+          <app-search></app-search>
+        </div>
 
-    <div class="profile-container">
-      <app-user-image class="profile-image" [userData]="{
-          image: image,
-          firstName: firstName,
-          lastName: lastName,
-          username: username
-        }" clickable="true">
-      </app-user-image>
+        <div class="share-resource">
+          <fa-icon [icon]="faPlus"></fa-icon>
+        </div>
+
+        <div class="profile-container">
+          <app-user-image class="profile-image" [userData]="{
+              image: image,
+              firstName: firstName,
+              lastName: lastName,
+              username: username
+            }" clickable="true">
+          </app-user-image>
+        </div>
+      </div>
     </div>
   </mat-toolbar>
 
