--- a/src/app/layouts/main/main.component.scss
+++ b/src/app/layouts/main/main.component.scss
@@ -18,34 +18,49 @@
 	}
 
 	.toolbar {
+		width: 100%;
 		display: inline-grid;
-		grid-template-columns: 50px auto 20px;
+		grid-template-columns: 1fr 1fr;
 		background-color: var(--navigation-background-color);
 		box-shadow: 0 2px 16px rgba(167, 104, 104, 0.1);
 		z-index: 100;
 		position: relative;
+		align-content: center;
 
-		.app-name {
-			display: none;
+		.left {
+			display: flex;
 
-			a {
-				color: #3C3C3C;
-				font-family: "Raleway", sans-serif;
-				font-weight: 200;
-				text-transform: uppercase;
-				letter-spacing: 8px;
-				text-decoration: none;
+			.app-name {
+				align-self: center;
 
-				&:visited {
-					color: inherit;
+				a {
+					color: #3C3C3C;
+					font-family: "Raleway", sans-serif;
+					font-weight: 200;
+					text-transform: uppercase;
+					letter-spacing: 8px;
+					text-decoration: none;
+
+					&:visited {
+						color: inherit;
+					}
 				}
 			}
 		}
 
-		.app-search {
-			width: 100%;
-			justify-self: center;
+		.right {
+			display: inline-grid;
 			align-self: center;
+			align-content: center;
+			align-items: center;
+			grid-template-columns: 50px 50px;
+			justify-content: center;
+			justify-self: end;
+			justify-items: center;
+
+			.app-search {
+				text-align: center;
+			}
 		}
 	}
 
@@ -95,35 +110,12 @@
 	border: 1px solid rgba(0, 0, 0, 1) !important;
 }
 
-@media (min-width: 320px) and (max-width: 420px) {
-	.app-container {
-		.toolbar {
-			.app-search {
-				width: 10rem;
-			}
-		}
-	}
-}
+@media (min-width: 320px) and (max-width: 420px) {}
 
 @media (min-width: 768px) {
 	.app-container {
-		.sidenav-container {
-			.app-name {
-				display: none;
-			}
-		}
-
 		.toolbar {
-			grid-template-columns: 50px 1fr 180px 70px;
-
-			.app-name {
-				display: inherit;
-			}
-
-			.app-search {
-				width: 15rem;
-				grid-column-start: auto;
-			}
+			grid-template-columns: 1fr 1fr;
 		}
 	}
 }
