--- a/src/app/layouts/main/main.component.scss
+++ b/src/app/layouts/main/main.component.scss
@@ -1,3 +1,7 @@
+.mat-toolbar-box-shadow {
+	box-shadow: 0 2px 16px rgba(167, 104, 104, 0.1);
+}
+
 .app-container {
 	background-color: #dee8ff;
 	display: flex;
@@ -22,7 +26,6 @@
 		display: inline-grid;
 		grid-template-columns: 1fr 1fr;
 		background-color: var(--navigation-background-color);
-		box-shadow: 0 2px 16px rgba(167, 104, 104, 0.1);
 		z-index: 100;
 		position: relative;
 		align-content: center;
@@ -32,18 +35,29 @@
 
 			.app-name {
 				align-self: center;
+				color: #3C3C3C;
+				font-family: "Raleway", sans-serif;
+				font-weight: 200;
+				text-transform: uppercase;
+				letter-spacing: 8px;
+				text-decoration: none;
+				display: grid;
+				grid-template-columns: 40px 1fr;
+				align-items: center;
+				grid-gap: 15px;
 
-				a {
-					color: #3C3C3C;
-					font-family: "Raleway", sans-serif;
-					font-weight: 200;
-					text-transform: uppercase;
-					letter-spacing: 8px;
-					text-decoration: none;
+				img {
+					width: 40px;
+					height: 40px;
+				}
 
-					&:visited {
-						color: inherit;
-					}
+				p {
+					margin: 0;
+					color: white;
+				}
+
+				&:visited {
+					color: inherit;
 				}
 			}
 		}
