dark mode toggle moved to sidemenu

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -16,7 +16,7 @@
     </form>
   </div>
 
-  <div class="search-compact">
+  <div class="search-compact" (click)="goToSearch(true)">
     <fa-icon [icon]="faSearch"></fa-icon>
   </div>
 
